--------------------------------------------------------------------------------
Changes for 2.0.0rc4

New features:
..F....... [ZBXNEXT-1181] redesign Host mass update (Eduard)

Bug fixes:
A......... [ZBX-4927] fix proxy deletion message and remove excess space from the audit record (Richlv)
..F....... [ZBX-4900] improved performance of 'Status of Zabbix' dashboard widget (Vedmak)
...G...... [ZBX-4905] fixed processing of system.swap.in/out[,pages] under Linux 2.6 (Sasha)
...G...... [ZBX-4907] fixed processing of system.swap.in/out[,sectors/count] under Linux (Sasha)
..F....... [ZBX-4902] fixed errors in configuration export (Vedmak)
........S. [ZBX-4910] fixed updating of "SNMPv3 priv passphrase" field in low-level discovered SNMPv3 items (Sasha)
........S. [ZBX-4884] fixed incorrect calculation of items using option "Delta (speed per second)" after recovery from unsupported state (Sasha)
........S. [ZBX-4671] fixed truncation of the calculated item formula (Sasha)
........S. [ZBX-4893] fixed linking of item applications by a discovery rule (Sasha)
..F....... [ZBX-4649] fixed Editing screen does not work properly after moving content to other cell (Toms)
..F....... [ZBX-4875] fixed graph item with long description cannot be dragged/sorted properly in graph form (Toms)

--------------------------------------------------------------------------------
Changes for 2.0.0rc3

New features:
....I..... [ZBXNEXT-973] redesign of existing templates (Alexei, Sasha)
..F....... [ZBX-4869] added support for nested screens import (Vedmak)
A.F....... [ZBXNEXT-1161] implemented the service API (Pavels)
A.F....... [ZBXNEXT-1126] redesign Script execution (Eduard)
...GI..... [ZBXNEXT-584] added support of multiple server in active check mode; thanks to Takanori Suzuki (Sasha)
..F.I..... [ZBX-3721] design improvements (Pavels)
A.F....... [ZBXNEXT-908] redesign Configuration->Host->Graphs (Eduard)